<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Welcome to SubjectivePlayer for Android!</string>
    <string name="app_name">SubjectivePlayer</string>
<string name="select_config">Please select a config file containing the videos!</string>
<string name="select_id">Please enter your participant ID!</string>
<string name="menu_about">About</string>
<string name="menu_exit">Exit</string>
<string name="select_filebrowser">Select a config file</string>

<string name="select_method">Please select a testing method!</string>
<string name="select_method_browser">Select a method</string>


<string name="menu_preferences">Preferences</string>

<string name="preferences_configsuffix">Config file suffix</string>
<string name="preferences_configsuffix_summary">Edit the suffix for configuration files</string>
<string name="preferences_categories_config">Configuration files</string>
<string name="error_nodata_body">Missing config file, method or ID. Please enter all data!</string>
<string name="error_nodata_caption">Missing data</string>
<string name="about_caption">About SubjectivePlayer</string>
<string name="about_body">SubjectivePlayer for Android is written by Werner Robitza in the project CACMTV, University of Vienna. Please go to code.google.com/p/subjectiveplayer for help! Thanks a lot for using!</string>
<string name="select_config_selected">Selected config:</string>
<string name="select_method_selected">Selected method:</string>
<string name="rate_ACR_caption">Please rate</string>
<string name="preferences_categories_acr">ACR preferences</string>
<string name="preferences_acrnumbers">Log ACR numbers</string>
<string name="preferences_acrnumbers_summary_true">Write numbers instead of category names in log file</string>
<string name="preferences_acrnumbers_summary_false">Write category names instead of numbers in log file</string>
<string name="rate_continuous_caption">Please rate</string>
<string name="dialog_no_ticks_max">Max</string>
<string name="dialog_no_ticks_min">Min</string>
<string name="preferences_categories_continuous">Continuous rating preferences</string>
<string name="preferences_noticks_caption">No ticks</string>
<string name="preferences_noticks_summary_true">Show no ticks on the slider</string>
<string name="preferences_noticks_summary_false">Show ticks on the slider</string>
</resources>
